style: fix white space from Header css, use proper padding instead

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -12,5 +12,5 @@
 }
 
 .row {
-  margin-top: 20px;
+  padding-top: 20px;
 }
